--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="AssisMax Atacarejo" />
     <meta name="keywords" content="atacarejo, distribuição, valparaíso goiás, preços atacado, arroz, feijão, óleo, café, economia" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+
     <meta property="og:title" content="AssisMax Atacarejo - Preços de Atacado para Pessoa Física" />
     <meta property="og:description" content="Economia real em produtos essenciais. Preços de atacado para pessoa física em Valparaíso de Goiás." />
     <meta property="og:type" content="website" />
